--- a/hwp2latex/templates/hwp2latex/converter0.html
+++ b/hwp2latex/templates/hwp2latex/converter0.html
@@ -1,6 +1,16 @@
-{% extends 'hwp2latex/base.html' %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Hwp to Latex equation</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% block content %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Hwp to Latex equation</h1>
     <h2>Hwp equation input</h2>
       <ul>
         <li>
@@ -13,18 +23,20 @@
       </ul>
 
     {% if latexeq %}
-    <br/>
     <h2>Latex equation output</h2>
       <ul>
-        <table><tr><td>\[{{latexeq}}\]</td></tr></table>
-        <li><strong>{{latexeq}}</strong></li>
+        <li>{{latexeq}}</li>
+        <li>{{latexeq}}</li>
       </ul>
     {% endif %}
-    <br/>
-    <br/>
+
+
     <h4>Acknowledgement</h3>
       <ul>
         <li>This page is using hml_equation_parser. <a href=https://github.com/OpenBapul/hml-equation-parser>https://github.com/OpenBapul/hml-equation-parser</a></li>
         <li><b>The result may not be perfect. Use at your own risk!</b></li>
       </ul>
-      {% endblock %}
+
+
+  </body>
+</html>
