change converte to root

--- a/hwp2latex/templates/hwp2latex/converter.html
+++ b/hwp2latex/templates/hwp2latex/converter.html
@@ -4,7 +4,7 @@
     <h2>Hwp equation input</h2>
       <ul>
         <li>
-          <form action="/converter/" method="post">
+          <form action="/" method="post">
             {% csrf_token %}
             {{ form }}
             <input type="submit" value="Submit" />
