--- a/hwp2latex/templates/hwp2latex/converter.html
+++ b/hwp2latex/templates/hwp2latex/converter.html
@@ -24,7 +24,7 @@
     <br/>
     <h4>Acknowledgement</h3>
       <ul>
-        <li>This page is using hml_equation_parser. <a href=https://github.com/OpenBapul/hml-equation-parser>https://github.com/OpenBapul/hml-equation-parser</a></li>
+        <li>This page is using <a href="https://github.com/OpenBapul/hml-equation-parser">hml_equation_parser</a> and <a href="https://www.mathjax.org">mathjax</a>.</li>
         <li><b>The result may not be perfect. Use at your own risk!</b></li>
       </ul>
       {% endblock %}
