--- a/hwp2latex/static/css/blog.css
+++ b/hwp2latex/static/css/blog.css
@@ -3,7 +3,7 @@
 .page-header {
     background-color: RoyalBlue;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 20px 20px 20px 20px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -19,6 +19,14 @@
 .date {
     color: #828282;
 }
+.log-input {
+    color: Blue;
+}
+
+.log-output {
+    color: Red;
+}
+
 
 .save {
     float: right;
