--- a/hwp2latex/templates/hwp2latex/base.html
+++ b/hwp2latex/templates/hwp2latex/base.html
@@ -1,19 +1,23 @@
+<!DOCTYPE html>
 {% load staticfiles %}
-<html>
+<html lang="en">
     <head>
-        <title>Hwp to Latex equation</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
+      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+      <script type="text/javascript" async
+          src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+      </script>
+      <title>Hwp to Latex equation</title>
 
     </head>
     <body>
         <div class="page-header">
-            <h1>Hwp to Latex equation</h1>
+            <h1><a href="/">Hwp to Latex equation</a></h1>
         </div>
         <div class="content container">
             <div class="row">
