--- a/hwp2latex/static/css/blog.css
+++ b/hwp2latex/static/css/blog.css
@@ -50,3 +50,14 @@
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+
+
+table.css-serial {
+  counter-reset: serial-number;  /* Set the serial number counter to 0 */
+/*  background-color: green; */
+}
+
+.css-serial td:first-child:before {
+  counter-increment: serial-number;  /* Increment the serial number counter */
+  content: counter(serial-number);  /* Display the counter */
+}
